--- a/src/guides.css
+++ b/src/guides.css
@@ -1,29 +1,95 @@
 /* General */
-body::selection{background:transparent;}
+body::selection {
+  background: transparent; }
 
-/* Righelli */
-.rule_voll{position:fixed;z-index:1999999999;background-color:white}
-	#ruleH_voll{height:15px;width:100%;background-image:url('chrome-extension://__MSG_@@extension_id__/images/hruler.png');left:15px;right:0;top:0;}
-	#ruleV_voll{height:100%;width:15px;background-image:url('chrome-extension://__MSG_@@extension_id__/images/vruler.png');top:15px;bottom:0;left:0;}
-		#ruleH_voll:hover{cursor:s-resize;}
-		#ruleV_voll:hover{cursor:e-resize;}
-.rule_voll span{position:absolute;background-color:red;display:block;}
-	#ruleH_voll span{width:1px;height:15px;top:0;}
-	#ruleV_voll span{width:15px;height:1px;left:0;}
+.vollguides__overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 15px;
+  left: 15px;
+  bottom: 0;
+  right: 0;
+  opacity: .35;
+  background-color: black;
+  z-index: 170000;
+  cursor: crosshair; }
+.vollguides__tooltip {
+  background: black;
+  padding: 2px 4px;
+  border-radius: 3px;
+  color: white;
+  position: absolute;
+  z-index: 22000;
+  font-size: 10px;
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6); }
+  .vollguides__tooltip::selection {
+    background: transparent; }
+.vollguides__rule {
+  position: fixed;
+  z-index: 1999999999;
+  background-color: white; }
+  .vollguides__rule--h {
+    height: 15px;
+    width: 100%;
+    background-image: url("chrome-extension://__MSG_@@extension_id__/images/hruler.png");
+    left: 15px;
+    right: 0;
+    top: 0; }
+    .vollguides__rule--h:hover {
+      cursor: s-resize; }
+  .vollguides__rule--v {
+    height: 100%;
+    width: 15px;
+    background-image: url("chrome-extension://__MSG_@@extension_id__/images/vruler.png");
+    top: 15px;
+    bottom: 0;
+    left: 0; }
+    .vollguides__rule--v:hover {
+      cursor: e-resize; }
+  .vollguides__rule-pointer {
+    position: absolute;
+    background-color: red;
+    display: block; }
+    .vollguides__rule--h .vollguides__rule-pointer {
+      width: 1px;
+      height: 15px;
+      top: 0; }
+    .vollguides__rule--v .vollguides__rule-pointer {
+      width: 15px;
+      height: 1px;
+      left: 0; }
+.vollguides__line {
+  position: fixed;
+  cursor: pointer;
+  z-index: 190000;
+  display: none; }
+  .vollguides__line:after {
+    display: block;
+    position: absolute;
+    content: '';
+    background: #4affff; }
+  .vollguides__line--h {
+    height: 5px;
+    width: 100%;
+    left: 15px;
+    cursor: ns-resize; }
+    .vollguides__line--h:after {
+      height: 1px;
+      width: 100%;
+      top: 2px;
+      left: 0; }
+  .vollguides__line--v {
+    height: 100%;
+    width: 5px;
+    top: 15px;
+    cursor: ew-resize; }
+    .vollguides__line--v:after {
+      height: 100%;
+      width: 1px;
+      left: 2px;
+      top: 0; }
 
-/* Singole Guide */
-.guide_voll{position:fixed;cursor:pointer;z-index:190000;display:none;}
-.guide_voll::after{display:block;position:absolute;content:'';background:#4affff;}
-
-.ruleH_voll{height:5px;width:100%;left:15px;cursor:ns-resize;}
-.ruleV_voll{height:100%;width:5px;top:15px;cursor:ew-resize;}
-
-.ruleH_voll::after{height:1px;width:100%;top:2px;left:0;}
-.ruleV_voll::after{height:100%;width:1px;left:2px;top:0;}
-
-/* Overlay */
-#overlay_voll{position:fixed;width:100%;height:100%;top:15px;left:15px;bottom:0;right:0;opacity:0.35;background-color:black;z-index:170000;cursor:crosshair}
-
-/* Tooltip */
-#tooltip_voll{background:black;padding:2px 4px;border-radius:3px;color:white;position:absolute;z-index:22000;font-size:10px;font-family:Arial;font-weight:bold;box-shadow:0 0 10px rgba(0,0,0,0.6);}
-#tooltip_voll::selection{background:transparent;}
+/*# sourceMappingURL=guides.css.map */
